--- a/tech-rider.html
+++ b/tech-rider.html
@@ -45,9 +45,10 @@
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             z-index: 1;
             right: 0; /* Align dropdown to the right of the button */
+            top: 100%; /* Position directly below the button */
             border-radius: 0.5rem; /* Rounded corners for dropdown */
             overflow: hidden; /* Ensures rounded corners are applied to children */
-            margin-top: 0.5rem; /* Space between button and dropdown */
+            /* Removed margin-top to prevent gap */
         }
         .dropdown-content a {
             color: black;
