--- a/index.html
+++ b/index.html
@@ -178,12 +178,15 @@
                  class="mx-auto rounded-lg shadow-xl border-2 border-B22222 w-full max-w-md">
             <!-- Download Button -->
             <div class="text-center mt-6">
-                <a href="https://drive.google.com/drive/folders/1y2gfTTyEmbwQNnZFWhverIR3_YJE_lI9?fbclid=IwY2xjawK6xNVleHRuA2FlbQIxMABicmlkETBrMEtvdUkxRlZjRmpxd1dKAR7DiJDHMpEuRqAjMGJO-DDuLGXruw05XWI3oVsa2jq81_om2F5zTJqlq3e4TA_aem_W85MRpp2rsne0CisWFYvMA" download="jimmy-fitzsimmons-logo.png" class="btn-primary" data-translate-key="download_button">
-                    Download Photos & Logo
-                </a>
-                <a href="tech-rider.html" class="btn-primary" data-translate-key="tech_rider_button">
-                    Tech Rider
-                </a>
+                <!-- Use a flex container to manage button layout on different screen sizes -->
+                <div class="flex flex-col sm:flex-row sm:space-x-4 space-y-4 sm:space-y-0 justify-center items-center">
+                    <a href="https://drive.google.com/drive/folders/1y2gfTTyEmbwQNnZFWhverIR3_YJE_lI9?fbclid=IwY2xjawK6xNVleHRuA2FlbQIxMABicmlkETBrMEtvdUkxRlZjRmpxd1dKAR7DiJDHMpEuRqAjMGJO-DDuLGXruw05XWI3oVsa2jq81_om2F5zTJqlq3e4TA_aem_W85MRpp2rsne0CisWFYvMA" download="jimmy-fitzsimmons-logo.png" class="btn-primary w-full sm:w-auto" data-translate-key="download_button">
+                        Download Photos & Logo
+                    </a>
+                    <a href="tech-rider.html" class="btn-primary w-full sm:w-auto" data-translate-key="tech_rider_button">
+                        Tech Rider
+                    </a>
+                </div>
             </div>
         </div>
 
@@ -326,6 +329,7 @@
                 "source_ravnododna": "— Ravno do dna",
                 "connect_heading": "CONNECT WITH JIMMY FITZSIMMONS",
                 "download_button": "Download Photos & Logo",
+                "tech_rider_button": "Tech Rider",
                 "scan_music_heading": "SCAN FOR MORE MUSIC",
                 "spotify_label": "Spotify Album",
                 "open_spotify": "Open on Spotify",
@@ -350,10 +354,11 @@
                 "source_balkanrock": "— Balkanrock",
                 "quote_poprock": "\"Njihov izričaj odlikuje autentičnost, distanca od komercijalne formule i stav “sve ili ništa”.\"",
                 "source_poprock": "— Poprock",
-                "quote_ravnododna": "\"Jimmy Fitzsimmons nije na brzinu sklepano društvance diletanata, već spoj iskusnih glazbenika kojima je trebao svojevrsni ventil za igranje s idejama i dobrim grooveom, što je dobrim dijelom sličan pristup za kojim je posegnuo Jack White na svom prošlogodišnjem „No Name“ albumu.\"",
+                "quote_ravnododna": "\"Jimmy Fitzsimmons is not a hastily thrown-together bunch of amateurs, but rather a group of seasoned musicians who needed a kind of outlet for playing around with ideas and a solid groove — a similar approach to the one Jack White took on his No Name album last year.\"",
                 "source_ravnododna": "— Ravno do dna",
                 "connect_heading": "POVEŽITE SE SA JIMMY FITZSIMMONS",
                 "download_button": "Preuzmite Fotografije i Logo",
+                "tech_rider_button": "Tehnička Lista",
                 "scan_music_heading": "SKENIRAJTE ZA VIŠE MUZIKE",
                 "spotify_label": "Spotify Album",
                 "open_spotify": "Otvori na Spotify-u",
