--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <img src="https://i.imgur.com/16O2W4n.png" alt="Jimmy Fitz Logo" class="logo-img">
         <!-- Band Name and Logo -->
         <div class="text-center">
-            <img src="https://i.imgur.com/cw2DZCv.jpeg"
+            <img src="https://imgur.com/rlrIiNY"
                  onerror="this.onerror=null;this.src='https://placehold.co/800x500/B22222/F5EFE6?text=BAND%0AFITZSIMMONS';"
                  alt="Jimmy Fitzsimmons Band Logo"
                  class="mx-auto rounded-lg shadow-xl border-2 border-B22222 w-full max-w-md">
