--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
             <h2 class="text-3xl text-center sm:text-left" data-translate-key="watch_listen_heading">WATCH & LISTEN</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-4">
                 <!-- Video 1 Thumbnail -->
-                <a href="https://www.youtube.com/watch?v=ZyJkKRuyYfE" target="_blank" class="video-thumbnail-container">
-                    <img src="https://img.youtube.com/vi/ZyJkKRuyYfE/hqdefault.jpg" alt="Video Thumbnail">
+                <a href="https://www.youtube.com/watch?v=h1YV2XdoLHQ" target="_blank" class="video-thumbnail-container">
+                    <img src="https://img.youtube.com/vi/h1YV2XdoLHQ/hqdefault.jpg" alt="Video Thumbnail">
                     <i class="fas fa-play-circle play-icon"></i>
                 </a>
                 <!-- Video 2 Thumbnail -->
