--- a/index.html
+++ b/index.html
@@ -228,15 +228,16 @@
                     <i class="fas fa-play-circle play-icon"></i>
                 </a>
                 <!-- Video 2 Thumbnail -->
-                <a href="https://www.youtube.com/watch?v=qqNYAO9pLBo" target="_blank" class="video-thumbnail-container">
-                    <img src="https://img.youtube.com/vi/qqNYAO9pLBo/hqdefault.jpg" alt="Video Thumbnail">
-                    <i class="fas fa-play-circle play-icon"></i>
-                </a>
-                <!-- Video 3 Thumbnail -->
                 <a href="https://www.youtube.com/watch?v=7CN509msQdE" target="_blank" class="video-thumbnail-container">
                     <img src="https://img.youtube.com/vi/7CN509msQdE/hqdefault.jpg" alt="Video Thumbnail">
                     <i class="fas fa-play-circle play-icon"></i>
                 </a>
+                <!-- Video 3 Thumbnail -->
+                <a href="https://www.youtube.com/watch?v=xbz5kvYRkMo" target="_blank" class="video-thumbnail-container">
+                    <img src="https://img.youtube.com/vi/xbz5kvYRkMo/hqdefault.jpg" alt="Video Thumbnail">
+                    <i class="fas fa-play-circle play-icon"></i>
+                </a>
+
             </div>
         </section>
 
